<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#072775"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="You must add your new ship information"
        android:gravity="center"
        android:textColor="#ffffff"
        android:textSize="20sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:gravity="center">
        <EditText
            android:id="@+id/editTenTau"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_width="190dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/tentau"
            android:background="#FFFFFF"/>
        <EditText
            android:id="@+id/editHeight"
            android:inputType="number"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_width="190dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/height"
            android:background="#FFFFFF"/>
        <EditText
            android:id="@+id/editWidth"
            android:inputType="number"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_width="190dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/width"
            android:background="#FFFFFF"/>
        <EditText
            android:id="@+id/editUnladenWeight"
            android:inputType="number"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_width="190dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/unladenweight"
            android:background="#FFFFFF"/>
        <EditText
            android:id="@+id/editBottomHeight"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_width="190dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/bottomheight"
            android:background="#FFFFFF"/>
        <EditText
            android:id="@+id/editVolume"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_width="190dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/thetich"
            android:background="#FFFFFF"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center|top">
        <Button
            android:id="@+id/btnConfirm"
            android:background="#E05015"
            android:layout_width="190dp"
            android:layout_marginTop="20dp"
            android:layout_height="45dp"
            android:text="Confirm"/>
    </LinearLayout>

</LinearLayout>