<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#124B7E"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        style="@android:style/Widget.Holo.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="SIGN UP"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:textIsSelectable="false"
        android:textSize="22sp"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/editGmail"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:hint="@string/Gmail" />

    <EditText
        android:id="@+id/editUserNew"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/Username"
        android:background="#FFFFFF"/>

    <EditText
        android:id="@+id/editPassNew"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:inputType="textPassword"
        android:hint="@string/Password"
        android:background="#FFFFFF"/>

    <EditText
        android:id="@+id/editConPassNew"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:hint="@string/ConfirmPassword"
        android:background="#FFFFFF"/>

    <Button
        android:id="@+id/btnResgister"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#D64C22"
        android:text="REGISTER"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Already Having an Account?"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnBackLogin"
            android:layout_width="190dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="#F09158"
            android:text="LOG IN"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</LinearLayout>